--- a/onas.html
+++ b/onas.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title>Asia Floral Studio</title>
-<link rel="stylesheet" type="text/css" href="main.css" />
-<script type="text/javascript" src="swfobject.js"></script>
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <title>Asia Floral Studio</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 <style>
 
 
@@ -36,10 +36,10 @@ text :padding-left 150 px
 		 
 		 <!-- Begin Content -->
 		 <div id="content">		 <p class="big"><font face="Verdana" size="2">Asia Floral Studio to firma z 10 letnim do&#347;wiadczeniem na rynku ameryka&#324;skim.<br>
-          Zosta&#322;a utworzona przez m&#322;odych, kreatywnych ludzi, dla których liczy si&#281;<br>
-          profesjonalizm i elegancja. Nasz styl to po&#322;&#261;czenie kwiatów z nietypowymi<br>
-          odmianami warzyw i owoców. Nasz&#261; pasj&#261; jest &#322;&#261;czenie ró&#380;nych stylów<br>
-          oraz materia&#322;ów, poprzez które wyra&#380;amy pi&#281;kno natury.<br>
+          Zosta&#322;a utworzona przez m&#322;odych, kreatywnych ludzi, dla ktďż˝rych liczy si&#281;<br>
+          profesjonalizm i elegancja. Nasz styl to po&#322;&#261;czenie kwiatďż˝w z nietypowymi<br>
+          odmianami warzyw i owocďż˝w. Nasz&#261; pasj&#261; jest &#322;&#261;czenie rďż˝&#380;nych stylďż˝w<br>
+          oraz materia&#322;ďż˝w, poprzez ktďż˝re wyra&#380;amy pi&#281;kno natury.<br>
           Ka&#380;da kompozycja stanowi odr&#281;bne dzie&#322;o sztuki stworzone dla Ciebie i z my&#347;l&#261; o Tobie.	
 
 	<br>
@@ -48,7 +48,7 @@ text :padding-left 150 px
 	<br>
 	
 	
-	Filmy i artykuły</font><br>
+	Filmy i artykuďż˝y</font><br>
 	<a href="images/slub.pdf"><img src="images/kwiaty_do_slubu.jpg" alt="asiafloralstudio" border="0" 
 	style="-moz-opacity:0.8;filter:alpha(opacity=80)"
 	onmouseover="this.style.MozOpacity=1;this.filters.alpha.opacity=100"
