--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Asia Floral Studio</title>
-<link rel="stylesheet" type="text/css" href="main.css" />
-<script type="text/javascript" src="swfobject.js"></script>
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <title>Asia Floral Studio</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 <style>
 #content {
 background:url(images/tlociemne.jpg) no-repeat;}
