--- a/kontakt.html
+++ b/kontakt.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-<title>Asia Floral Studio</title>
-<link rel="stylesheet" type="text/css" href="main.css" />
-<script type="text/javascript" src="swfobject.js"></script>
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <title>Asia Floral Studio</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 <style>
 #content {
 background:url(images/tloonas.jpg) no-repeat;
@@ -38,13 +38,13 @@ asiafloralstudio@yahoo.com
 </p>
 
 <form action="kontakt.php" name="zapytanie" method="post">
-<p><font face="Verdana" size="2">Imię i Nazwisko: </font><br>
+<p><font face="Verdana" size="2">Imiďż˝ i Nazwisko: </font><br>
 <input type="text" name="osobakontaktowa" size="20" maxlength="45" style="width:200px; HEIGHT:20px;" class="inputszukaj"><br>
 <font face="Verdana" size="2">Telefon:</font><br>
 <input type="text" name="telefon" size="20" maxlength="45" style="width:200px; HEIGHT:20px;" class="inputszukaj"><br>
-<font face="Verdana" size="2">Własny e-mail:</font><br>
+<font face="Verdana" size="2">Wďż˝asny e-mail:</font><br>
 <input type="text" name="email" size="20" maxlength="45" style="width:200px; HEIGHT:20px;" class="inputszukaj"><br>
-<font face="Verdana" size="2">Wiadomo&#347;ć:</font><br>
+<font face="Verdana" size="2">Wiadomo&#347;ďż˝:</font><br>
 <textarea name="wiadomosc" cols="40" rows="5" style="width:300px; height:50px" class="inputszukaj"></textarea><br>
  
 <input  type="submit" name="send" value="Wy&#347;lij" class="inputszukaj"></p>
