--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@ text :padding-left 150 px
 		 <!-- End Header -->
 		 
 		 <!-- Begin Content -->
-		 <div id="content"><p><font face="Verdana">Joanna K&#261;cka<br />+48 516 039 705<br />
+		 <div id="content"><p><font face="Verdana">Joanna Kącka<br />+48 516 039 705<br />
                 asiafloralstudio@yahoo.com</font>		
 			    
           </p>	
