--- a/tvne.html
+++ b/tvne.html
@@ -32,7 +32,8 @@ text :padding-left 150 px
 		 <!-- End Header -->
 		 
 		 <!-- Begin Content -->
-		 <div id="content"><p class="big"><font face="Verdana" size="2"><object width="570" height="315"><param name="movie" value="https://www.youtube.com/v/D323WTmrEmY&amp;hl=pl_PL&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/D323WTmrEmY&amp;hl=pl_PL&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="570" height="315"></embed></object>
+		 <div id="content"><p class="big"><font face="Verdana" size="2">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D323WTmrEmY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
